# python_agent_env

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AI_agent.md  DEVELOPMENT.md  DEVELOPMENT_GUIDE.md  Dockerfile  IMPROVEMENT_PROPOSAL.md  README.md  architencture_design.md  eslint.config.js  improving_claude_process.md  package-lock.json  package.json  prettier.config.js  pyproject.toml  repository_overview.md  run-precommit.sh  samplemcp.py  tsconfig.json
.claude/: settings.json  settings.local.json
.devcontainer/: devcontainer.json
.gemini/: settings.json
.github/workflows/: ci.yml
.kiro/specs/gemini-claude-devcontainer/: design.md  requirements.md  tasks.md
.kiro/specs/typescript-migration/: design.md  requirements.md  tasks.md
docs/: create_quotation_architecture.md  how_to_process_merge.md  mcp_hosting.md  mcp_settings.md
src/: test.ts
src/python_agent_env/: __init__.py  editor_mcp.py  main.py  types.py
tests/: conftest.py  test_greet.py
tests/data/: test_config.yaml
tests/utils/: test_helpers.py
