[project]
name = "python_agent_env"
version = "0.1.0"
description = "Python development environment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=7.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.3",
    "black>=24.4.0",
]

[project.scripts]
python-agent-env = "python_agent_env.main:main"

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I"]
